--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-avatar": "^3.9.7",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-image-gallery": "^1.0.8",
     "react-loading": "^2.0.3",
+    "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
